fix horizontal scrollbar showing up [#43225137]

--- a/client/stylesheets/all.less
+++ b/client/stylesheets/all.less
@@ -697,12 +697,10 @@ table .ui-btn-inner{
 /*region media queries*/
 @media screen and (max-width: 640px) {
     #teamSettings{
-        width: 100%;
         td.name{
             font-weight: bold;
         }
         .tableWrapper{
-            width: 90%;
             margin-top: 20px;
         }
     }
@@ -718,11 +716,7 @@ table .ui-btn-inner{
             }
         }
     }
-    .ui-btn:not(.ui-btn-icon-right){
-        width: 93%;
-    }
     .ui-field-contain{
-        width: 93%;
         .ui-btn{
             width: 100%;
         }
@@ -754,24 +748,7 @@ table .ui-btn-inner{
 
 @media screen and (max-width: 447px) {
     .ui-field-contain .ui-input-text{
-        width: 97% !important;
-    }
-}
-
-@media screen and (max-width: 400px) {
-    #teamSettings{
-        .tableWrapper{
-             width: 87%;
-         }
-    }
-    .ui-btn:not(.ui-btn-icon-right){
-        width: 91%;
-    }
-    .ui-field-contain{
-        width: 91%;
-        .ui-btn{
-            width: 100%;
-        }
+        width: 96% !important;
     }
 }
 
